--- a/client/templates.html
+++ b/client/templates.html
@@ -8,35 +8,26 @@
 	<p>Notice that login buttons are provided at this public route.  Users who have created an account using an invitation token will be able to login here like any normal app. However, users who have not done this will <strong>not</strong> be able to login OR create accounts.</p>
 </template>
 
-<template name="acceptInvite">
+<!-- <template name="acceptInvite">
 	<h1>Thanks for your interest in this app!</h1>
     {{> inviteLogin token=token}}
-</template>
+</template> -->
 
 <!-- Templates for use with Accounts-Invite -->
 
-<template name="inviteLogin">
+<!-- <template name="inviteLogin">
 	{{> Template.dynamic template=inviteStatus}}
-</template>
+</template> -->
 
-<template name="inviteRequested">
-	You've requested an invite. We'll let you know when your invite is ready!
-</template>
-
-<template name="inviteInvited">
+<template name="invite-valid">
 	You're invited! Log in with any of these services:
 	{{>loginButtons}}
 </template>
 
-<template name="inviteVisited">
-	You're invited! Log in with any of these services:
-	{{>loginButtons}}
-</template>
-
-<template name="inviteClaimed">
+<template name="invite-claimed">
 	You've claimed your invitation.  Return <a href="/">home</a>.
 </template>
 
-<template name="inviteInvalid">
+<template name="invite-invalid">
 	Sorry, this is an invalid invitation.
 </template>
