--- a/client/templates.html
+++ b/client/templates.html
@@ -4,7 +4,7 @@
 
 <template name="home">
 	{{>loginButtons}}
-	<h1>Accounts-Invites Demo</h1>
+	<h1>Accounts-Invite Demo</h1>
 	<p>Don't you wish you could validate account creation in Meteor more flexibly? <a href="https://github.com/t3db0t/meteor-accounts-invite">t3db0t:accounts-invite</a> is a login validation extension for Meteor that supports OAuth services, not just accounts-password, and provides basic anonymous account functionality.  Coupled with <a href="https://github.com/t3db0t/meteor-invites">t3db0t:invites</a>, an invitation manager, we can quickly and easily create a fully-featured beta invitations and control system.</p>
 
 	<h2>OK, how does it work?</h2>
